--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,17 @@
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".LeagueActivity">
+        <activity android:name=".Controller.FinishActivity">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".Controller.SkillActivity">
+        </activity>
+        <activity android:name=".Controller.BaseActivity">
+        </activity>
+        <activity android:name=".Controller.LeagueActivity">
+        </activity>
+        <activity android:name=".Controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
